# astrbot_plugin_oven_multi

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  _conf_schema.json  balance_checker.py  favor_manager.py  main.py  mem0_client.py  metadata.yaml  pyproject.toml
.trae/rules/: agent.md
.workbuddy/artifacts/: overview.md
.workbuddy/memory/: 2026-06-29.md  2026-06-30.md
core/: __init__.py  base_feature.py  config_manager.py
features/: __init__.py  active_reply.py  balance_checker.py  bracket_matcher.py  forward_handler.py  mention_parser.py  repeater.py  thinking_manager.py
features/image_caption_cache/: __init__.py  cache.py  feature.py  patcher.py
features/learning_style/: __init__.py  learning_manager.py  scheduler.py  style_selector.py  system_prompt_rewriter.py
learning_style/: data_manager.py  learning_manager.py  scheduler.py  style_injector.py  style_selector.py  system_prompt_rewriter.py
pages/style_status/: app.js  index.html  style.css
utils/: __init__.py  constants.py  decorators.py  safe_eval.py
